[project]
name = "memory-in-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "pycopg[binary,pool]>=0.1.0",
]
